@@ -1,24 +1,17 @@
 package com.putoet.day16;
 
+import org.jetbrains.annotations.NotNull;
+
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
-public class PuzzleInput {
-    private final List<String> lines;
-
-    public PuzzleInput(List<String> lines) {
-        assert lines != null;
-
-        this.lines = lines;
-    }
-
+record PuzzleInput(@NotNull List<String> lines) {
     public List<TicketFieldValidator> ticketFieldValidators() {
-        final List<TicketFieldValidator> validators= new ArrayList<>();
+        final var validators = new ArrayList<TicketFieldValidator>();
 
-        for (int idx = 0; lines.get(idx).length() > 0; idx++) {
-            final String line = lines.get(idx);
+        for (var idx = 0; !lines.get(idx).isEmpty(); idx++) {
+            final var line = lines.get(idx);
 
             validators.add(TicketFieldValidator.of(idx, line));
         }
@@ -27,15 +20,16 @@ public class PuzzleInput {
     }
 
     public Ticket myTicket() {
-        for (int idx = 0; idx < lines.size() - 1; idx++) {
-            final String line = lines.get(idx);
+        for (var idx = 0; idx < lines.size() - 1; idx++) {
+            final var line = lines.get(idx);
 
             if (line.startsWith("your ticket:")) {
-                final String myTicket = lines.get(idx + 1);
-                return new Ticket("myTicket", Arrays.stream(myTicket.split(","))
-                        .mapToInt(Integer::parseInt)
-                        .boxed()
-                        .collect(Collectors.toList()));
+                final var myTicket = lines.get(idx + 1);
+                return new Ticket(
+                        "myTicket",
+                        Arrays.stream(myTicket.split(","))
+                                .map(Integer::parseInt)
+                                .toList());
             }
         }
 
@@ -43,18 +37,22 @@ public class PuzzleInput {
     }
 
     public List<Ticket> nearbyTickets() {
-        final List<Ticket> nearbyTickets = new ArrayList<>();
+        final var nearbyTickets = new ArrayList<Ticket>();
 
-        boolean tickets = false;
-        for (int idx = 0; idx < lines.size(); idx++) {
-            final String line = lines.get(idx);
+        var tickets = false;
+        for (var idx = 0; idx < lines.size(); idx++) {
+            final var line = lines.get(idx);
 
             if (tickets) {
-                final String ticket = lines.get(idx);
-                nearbyTickets.add(new Ticket("ticket-" + idx, Arrays.stream(ticket.split(","))
-                        .mapToInt(Integer::parseInt)
-                        .boxed()
-                        .collect(Collectors.toList())));
+                final var ticket = lines.get(idx);
+                nearbyTickets.add(
+                        new Ticket(
+                                "ticket-" + idx,
+                                Arrays.stream(ticket.split(","))
+                                        .map(Integer::parseInt)
+                                        .toList()
+                        )
+                );
             }
 
             if (line.startsWith("nearby tickets:"))
